Fix: Correct CorsConfigurationSource return type and add Netlify URL